tests/NormalTests/paczka1/fuzzy1/43403197.err
Error in line 5: B2LrLf S108 18,7
Error in line 6: B2LrLf S160 34,4
Error in line 28: B2LrLf S108 -1,2
Error in line 29: z2Lkw S160 73,9
